renamed root file to index.html

--- a/hex.html
+++ b/hex.html
@@ -17,7 +17,7 @@
                 <div>
                     <ul class="nav-links">
                         <li>
-                            <a href="simple.html" id="simple">Simple</a>
+                            <a href="index.html" id="simple">Simple</a>
                         </li>
                         <li>
                             <a href="hex.html" id="hex">Hex</a>
