--- a/hex.html
+++ b/hex.html
@@ -6,7 +6,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <link rel="stylesheet" href="styles.css" />
         <script src="hex.js" defer></script>
-        <title>Color Flipper || Simple</title>
+        <title>Color Flipper || Hex</title>
     </head>
     <body>
         <main class="main-container"> 
